z-index fix

--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body,
 html {
 	width: 100%;
 	height: 100%;
-	background-image: url('background2.png');
-	background-color: rgba(255, 255, 255, .9);
+	background-image: url('background.png');
+	background-color: rgba(255, 255, 255, .4);
 
 	background-blend-mode: lighten;
 }
@@ -20,7 +20,7 @@ h6 {
 }
 
 nav.dropdownmenu {
-     z-index: 1;
+     z-index: 100;
     background-color: #000000;
 }
 
@@ -68,7 +68,7 @@ nav.dropdownmenu {
 	position: absolute;
 	top: 35px;
 	visibility: hidden;
-	z-index: 1;
+	z-index: 99;
 }
 
 li:hover ul#submenu {
@@ -103,12 +103,12 @@ li:hover ul#submenu {
 	padding-top: 20px;
 	/* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
 	padding-bottom: 20px;
-z-index: 5;
+
 	text-align: center;
   width: 100%;
   position: relative;
-    background: rgba(255, 180, 130, 1);
-    border: 3px outset rgba(125, 0, 0, 0.6);
+    background: rgba(225, 140, 120, 1);
+    border: 2px outset rgba(0, 0, 0, 0.6);
 }
 
 .intro-message {
@@ -294,7 +294,7 @@ section {
 	margin: 0 0 15px;
 	right: 0;
 	background: rgba(255, 180, 130, 1);
-	border: 3px outset rgba(125, 0, 0, 0.6);
+	border: 2px outset rgba(0, 0, 0, 1);
 }
 
 #portfolio .portfolio-item:hover {
@@ -375,8 +375,8 @@ section {
 }
 
 #portfolio * {
-	z-index: 0;
-    position:relative;
+	z-index: 5;
+
 }
 
 @media (min-width:767px) {
